2001-10-23  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack-keys.el (nethack-menu-mode-map): Add
	(nethack-menu-mode-map): Add bindings for
	`nethack-menu-toggle-all-items'.
	(nethack-menu-mode-map): Bind keys to the extended commands.

	* nethack-api.el (nethack-api-end-menu): Comment out broken
	initial positioning code.
	(nethack-menu-toggle-all-items): New function.

2001-10-23  shawn  <sabetts@vcn.bc.ca>

	* nethack-api.el (nethack-api-getlin): send the string read from
	the minibuffer, not the object which is a a string.

	* nethack.el (nethack-parse-status-lines): the highlight delay is
	negative if the change in status is bad and positive when good.
	(nethack-parse-status-lines, nethack-format-status): if the status
	change is negative change the value to a red face, green if
	positive.
	(nethack-parse-status-lines): handles the case when
	nethack-status-alist is nil.

2001-10-22  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack.el (nethack-process-filter): Do not send the return
	value to the running process.

	* nethack-keys.el (nethack-map-mode-map): C-c C-c is bound to
	nethack-command-quit.

	* nethack-api.el (nethack-return): Send the return value directly
	from here.
	(nethack-retval): Remove function.
	(nethack-api-ask-direction): Add prompt argument.  Add down, up,
	and self directions.
	(nethack-api-display-nhwindow): Do not protect windows.  Clear the
	value of nethack-menu when displaying a menu window.
	(nethack-menu-goto-next): Make sure nethack-menu is non-nil.
	(nethack-menu-goto-prev): Likewise.
	(nethack-protect-windows): Remove macro.
	(nethack-api-select-menu): Do not protect windows.

	* nethack-apix.el: Removed from repository.

	* nethack.el (nethack-colors): New vector.
	(nethack-colors-alist): Remove.

	* nethack-api.el (nethack-api-print-glyph): Use nethack-colors
	vector.

	* nethack.el (nethack-format-status): Use nethack-red-face for
	changed attributes.

	* nethack-api.el (nethack-return): New function.
	(nethack-retval): New function.